--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^16.9.0",
     "apollo-link-error": "^1.1.13",
     "apollo-link-token-refresh": "^0.3.2",
+    "aws-s3": "^2.0.5",
     "axios": "^0.21.1",
     "cleave.js": "^1.6.0",
     "graphql": "^15.3.0",
