--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "apollo-errors": "^1.9.0",
     "apollo-resolvers": "^1.4.2",
     "apollo-server-express": "^2.17.0",
+    "aws-sdk": "^2.832.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "class-validator": "^0.12.2",
