--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^16.9.0",
     "apollo-link-error": "^1.1.13",
     "apollo-link-token-refresh": "^0.3.2",
+    "apollo-upload-client": "^14.1.3",
     "aws-s3": "^2.0.5",
     "axios": "^0.21.1",
     "cleave.js": "^1.6.0",
@@ -68,6 +69,7 @@
     "@graphql-codegen/typescript": "^1.20.0",
     "@graphql-codegen/typescript-operations": "^1.17.13",
     "@graphql-codegen/typescript-react-apollo": "^2.2.1",
+    "@types/apollo-upload-client": "^14.1.0",
     "@types/cleave.js": "^1.4.4",
     "@types/react-router-dom": "^5.1.6"
   }
